# DjangoReactUserAuth-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
accounts/: admin.py  managers.py  models.py  serializers.py  throttles.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: conftest.py  factories.py  test_auth_api.py  test_models.py
backend/: settings.py  urls.py  utils.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
requirements/: base.txt  local.txt  production.txt  requirements.txt
user_auth/: serializers.py  urls.py  utils.py  views.py
